--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,37 @@
+# Don't change this unless you update this plugin.
+version: '1.0'
+
+# If true, the plugin will log debug info.
+debug: false
+
+# There are three different modes 'BLOCK', 'CLOAK', AND 'OFF'.
+# 'BLOCK' doesn't respond to any pings.
+# 'CLOAK' responds with a fake ping.
+# 'OFF' turns the plugin OFF.
 mode: 'BLOCK'
-list: true
-list-reset: true
-list-reset-timer: 30
+
+# If true, whenever a player leaves the server the player's ip is added to a list.
+# And all ips added to the list will be able to ping the server.
+respond-after-player-quits: true
+
+# Each 1 whole number is a whole minute.
+# If 0, the timer will be disabled.
+# After this timer is over it will clear all ips added to the respond-after-player-join list.
+cached-address-timer: 30
+
+# All ips added to allowed-addresses below will always be able to ping the server.
+allowed-addresses:
+  - '127.0.0.1'
+
+# When 'CLOAK' mode is selected this will be the version displayed in the fake response ping.
+cloak-version: "Null"
+
+# When 'CLOAK' mode is selected this will be the protocol version displayed in the fake response ping.
+cloak-protocol-version: 0
+
+# When 'CLOAK' mode is selected this will be the motd displayed in the fake response ping.
+cloak-motd: "A Minecraft Server"
+
+# When 'CLOAK' mode is selected this will be the player count displayed in the fake response ping.
+cloak-player-count: 0
+cloak-player-max: 20
