--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,13 +24,13 @@ allowed-addresses:
   - '127.0.0.1'
 
 # When 'CLOAK' mode is selected this will be the version displayed in the fake response ping.
-cloak-version: "Null"
+cloak-version: 'Null'
 
 # When 'CLOAK' mode is selected this will be the protocol version displayed in the fake response ping.
 cloak-protocol-version: 0
 
 # When 'CLOAK' mode is selected this will be the motd displayed in the fake response ping.
-cloak-motd: "A Minecraft Server"
+cloak-motd: 'A Minecraft Server'
 
 # When 'CLOAK' mode is selected this will be the player count displayed in the fake response ping.
 cloak-player-count: 0
